# autorop

./: README.md  pyproject.toml  solver.py
.github/workflows/: build-wheels.yml  ci.yml
src/autorop/: solver.py
tests/: __init__.py  test_solver.py
